Worked whith furniture block

--- a/src/index.html
+++ b/src/index.html
@@ -437,6 +437,69 @@
                </div>
             </div>
          </section>
+         <section class="furniture">
+            <h3 class="furniture__subtitle">Share your setup with</h3>
+            <h2 class="furniture__title _tittle">#FuniroFurniture</h2>
+            <div class="furniture__gallery gallery-furniture">
+               <div class="gallery-furniture__body">
+                  <div class="gallery-furniture__row">
+                     <div class="gallery-furniture__item gallery-furniture__item-left-top">
+                        <div data-src="@img/furniture/05.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/05.jpg" alt="Furniture 1">
+                        </div>
+                        <div data-src="@img/furniture/01.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/01.jpg" alt="Furniture 2">
+                        </div>
+                        <div data-src="@img/furniture/02.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/02.jpg" alt="Furniture 3">
+                        </div>
+                     </div>
+                     <div class="gallery-furniture__item gallery-furniture__item-left-bottom">
+                        <div data-src="@img/furniture/04.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/04.jpg" alt="Furniture 4">
+                        </div>
+                        <div data-src="@img/furniture/06.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/06.jpg" alt="Furniture 5">
+                        </div>
+                        <div data-src="@img/furniture/07.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/07.jpg" alt="Furniture 6">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="gallery-furniture__row">
+                     <div class="gallery-furniture__item gallery-furniture__item-center">
+                        <div data-src="@img/furniture/03.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/03.jpg" alt="Furniture 7">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="gallery-furniture__row">
+                     <div class="gallery-furniture__item gallery-furniture__item-right-top">
+                        <div data-src="@img/furniture/04.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/04.jpg" alt="Furniture 8">
+                        </div>
+                        <div data-src="@img/furniture/05.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/05.jpg" alt="Furniture 9">
+                        </div>
+                        <div data-src="@img/furniture/06.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/06.jpg" alt="Furniture 10">
+                        </div>
+                     </div>
+                     <div class="gallery-furniture__item gallery-furniture__item-right-bottom">
+                        <div data-src="@img/furniture/08.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/08.jpg" alt="Furniture 11">
+                        </div>
+                        <div data-src="@img/furniture/09.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/09.jpg" alt="Furniture 12">
+                        </div>
+                        <div data-src="@img/furniture/02.jpg" class="gallery-furniture__img">
+                           <img src="@img/furniture/02.jpg" alt="Furniture 13">
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       @@include('html/footer.html', {})
       <!--  @@include('html/messengers.html', {}) -->
