--- a/src/index.html
+++ b/src/index.html
@@ -441,7 +441,7 @@
             <h3 class="furniture__subtitle">Share your setup with</h3>
             <h2 class="furniture__title _tittle">#FuniroFurniture</h2>
             <div class="furniture__gallery gallery-furniture">
-               <div class="gallery-furniture__body">
+               <div data-speed="0.01" class="gallery-furniture__body">
                   <div class="gallery-furniture__row">
                      <div class="gallery-furniture__item gallery-furniture__item-left-top">
                         <div data-src="@img/furniture/05.jpg" class="gallery-furniture__img">
