--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -19,7 +19,7 @@
                            <a href="tel:%2B62894563455" class="_icon-phone">+6289 456 3455</a>
                         </div>
                         <div class="body-item-footer__link-site">
-                           <a href="#">www.funiro.com</a>
+                           <a data-popup-id="linkPopup" class="link-on-popup" href="#">www.funiro.com</a>
                         </div>
                      </div>
                   </div>
@@ -33,15 +33,18 @@
                      </div>
                      <div class="body-item-footer__content">
                         <ul class="body-item-footer__list">
-                           <li class="body-item-footer__list-item"><a href="#"
-                                 class="body-item-footer__link">Products</a></li>
-                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">Rooms</a>
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">Products</a></li>
+                           <li class="body-item-footer__list-item"><a href="#" data-popup-id="linkPopup"
+                                 class="body-item-footer__link link-on-popup">Rooms</a>
                            </li>
-                           <li class="body-item-footer__list-item"><a href="#"
-                                 class="body-item-footer__link">Inspirations</a></li>
-                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">About
+                           <li class="body-item-footer__list-item"><a href="#" data-popup-id="linkPopup"
+                                 class="body-item-footer__link link-on-popup">Inspirations</a></li>
+                           <li class="body-item-footer__list-item"><a href="#" data-popup-id="linkPopup"
+                                 class="body-item-footer__link link-on-popup">About
                                  Us</a></li>
-                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">Terms &
+                           <li class="body-item-footer__list-item"><a href="#" data-popup-id="linkPopup"
+                                 class="body-item-footer__link link-on-popup">Terms &
                                  Policy</a></li>
                         </ul>
                      </div>
@@ -52,14 +55,17 @@
                      </div>
                      <div class="body-item-footer__content">
                         <ul class="body-item-footer__list">
-                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">My
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">My
                                  Account</a></li>
-                           <li class="body-item-footer__list-item"><a href="#"
-                                 class="body-item-footer__link">Checkout</a>
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">Checkout</a>
                            </li>
-                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">My
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">My
                                  Cart</a></li>
-                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">My
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">My
                                  catalog</a></li>
                         </ul>
                      </div>
@@ -70,13 +76,13 @@
                      </div>
                      <div class="body-item-footer__content">
                         <ul class="body-item-footer__list">
-                           <li class="body-item-footer__list-item"><a href="#"
-                                 class="body-item-footer__link">Facebook</a></li>
-                           <li class="body-item-footer__list-item"><a href="#"
-                                 class="body-item-footer__link">Instagram</a>
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">Facebook</a></li>
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">Instagram</a>
                            </li>
-                           <li class="body-item-footer__list-item"><a href="#"
-                                 class="body-item-footer__link">Twitter</a></li>
+                           <li class="body-item-footer__list-item"><a data-popup-id="linkPopup" href="#"
+                                 class="body-item-footer__link link-on-popup">Twitter</a></li>
                         </ul>
                      </div>
                   </div>
