--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -3,7 +3,7 @@
       <div class="popup__content">
          <a href="#" class="popup__close close-popup">X</a>
          <div class="popup__title">
-            <h4>Вы успешно подписались на нашу рассылку</h4>
+            <h4>You have successfully subscribed to our newsletter</h4>
          </div>
          <div class="popup__button">
             OK
