--- a/src/html/header.html
+++ b/src/html/header.html
@@ -11,50 +11,60 @@
                   <nav class="menu__body">
                      <ul class="menu__list">
                         <li class="menu__item">
-                           <a href="" class="menu__link">Products</a><button type="button"
-                              class="menu__item-button _icon-arrow-down"></button>
+                           <a href="" data-popup-id="linkPopup" class="menu__link link-on-popup">Products</a><button
+                              type="button" class="menu__item-button _icon-arrow-down"></button>
 
                            <ul class="menu__sub-list">
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Product 1</a></li>
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Product 2</a></li>
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Product 3</a></li>
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Product 4</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Product 1</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Product 2</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Product 3</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Product 4</a></li>
                            </ul>
 
                         </li>
-                        <li class="menu__item"><a href="" class="menu__link">Rooms</a><button type="button"
+                        <li class="menu__item"><a href="" data-popup-id="linkPopup"
+                              class="menu__link link-on-popup">Rooms</a><button type="button"
                               class="menu__item-button _icon-arrow-down"></button>
 
                            <ul class="menu__sub-list">
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Room 1</a></li>
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Room 2</a></li>
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Room 3</a></li>
-                              <li class="menu__sub-item"><a href="" class="menu__sub-link">Room 4</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Room 1</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Room 2</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Room 3</a></li>
+                              <li class="menu__sub-item"><a href="" data-popup-id="linkPopup"
+                                    class="menu__sub-link link-on-popup">Room 4</a></li>
                            </ul>
 
                         </li>
-                        <li class="menu__item"><a href="" class="menu__link">Inspirations</a></li>
+                        <li class="menu__item"><a href="" data-popup-id="linkPopup"
+                              class="menu__link link-on-popup">Inspirations</a></li>
                      </ul>
                   </nav>
                </div>
             </div>
             <div class="header__search search-form">
                <button type="button" class="search-form__button _icon-search"></button>
-               <form action="#" class="search-form__form">
+               <form data-popup-id="linkPopup" action="#" class="search-form__form">
                   <button type="submit" class="search-form__button-submit _icon-search"></button>
                   <input type="text" name="" class="search-form__input" placeholder="Search for minimalist chair"
                      autocomplete="off">
                </form>
             </div>
             <div class="header__actions actions">
-               <a href="#" class="actions__favorite _icon-favorite"></a>
+               <a href="#" data-popup-id="linkPopup" class="actions__favorite link-on-popup _icon-favorite"></a>
                <div class="actions__cart cart-header">
                   <a href="" class="cart-header__icon _icon-Cart"></a>
                   <ul class="cart-header__header-list cart-list">
                   </ul>
                   </button>
                </div>
-               <a href="#" class="actions__avatar">
+               <a href="#" data-popup-id="linkPopup" class="actions__avatar link-on-popup">
                   <img src="@img/ava_light.jpg" alt="Avatar">
                </a>
             </div>
