--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
                            Our furniture is made from selected and best quality materials that are suitable for your
                            dream home
                         </div>
-                        <a href="#" class="content-main-slider__btn"><span>Shop Now</span></a>
+                        <a href="#" data-popup-id="linkPopup" class="content-main-slider__btn link-on-popup"><span>Shop
+                              Now</span></a>
                      </div>
                   </div>
                   <div class="main-slider__slider slider-main">
@@ -51,7 +52,8 @@
                                     <div class="content-slide__text">Luxury big sofa 2-seat</div>
                                     <div class="content-slide__price price-slide">
                                        <div class="price-slide__price">Rp 17.000.000</div>
-                                       <a href="" class="price-slide__link _icon-arrow-link"></a>
+                                       <a href="" data-popup-id="linkPopup"
+                                          class="price-slide__link link-on-popup _icon-arrow-link"></a>
                                     </div>
                                  </div>
                               </div>
@@ -67,7 +69,8 @@
                                     <div class="content-slide__text">Luxury big sofa 2-seat</div>
                                     <div class="content-slide__price price-slide">
                                        <div class="price-slide__price">Rp 17.000.000</div>
-                                       <a href="" class="price-slide__link _icon-arrow-link"></a>
+                                       <a href="" data-popup-id="linkPopup"
+                                          class="price-slide__link link-on-popup _icon-arrow-link"></a>
                                     </div>
                                  </div>
                               </div>
@@ -83,14 +86,16 @@
                                     <div class="content-slide__text">Luxury big sofa 2-seat</div>
                                     <div class="content-slide__price price-slide">
                                        <div class="price-slide__price">Rp 17.000.000</div>
-                                       <a href="" class="price-slide__link _icon-arrow-link"></a>
+                                       <a href="" data-popup-id="linkPopup"
+                                          class="price-slide__link link-on-popup _icon-arrow-link"></a>
                                     </div>
                                  </div>
                               </div>
                            </div>
                         </div>
                      </div>
-                     <a href="#" class=" content-main-slider__btn--mobile"><span>Shop
+                     <a href="#" data-popup-id="linkPopup"
+                        class="content-main-slider__btn--mobile link-on-popup"><span>Shop
                            Now</span></a>
                   </div>
                </div>
@@ -173,11 +178,13 @@
                         <div class="hover-product__actions">
                            <div class="hover-product__btn">Add to cart</div>
                            <div class="hover-product__social">
-                              <a href="#" class="hover-product__share _icon-share">Share</a>
-                              <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                              <a href="#" data-popup-id="linkPopup"
+                                 class="hover-product__share link-on-popup _icon-share">Share</a>
+                              <a href="#" data-popup-id="linkPopup"
+                                 class="hover-product__like link-on-popup _icon-favorite">Like</a>
                            </div>
                         </div>
-                        <a href="#" class="hover-product__look">
+                        <a href="#" data-popup-id="linkPopup" class="hover-product__look link-on-popup">
                            <p>Learn more</p>
                            <div class="_icon-arrow-link"></div>
                         </a>
@@ -205,11 +212,13 @@
                         <div class="hover-product__actions">
                            <div class="hover-product__btn">Add to cart</div>
                            <div class="hover-product__social">
-                              <a href="#" class="hover-product__share _icon-share">Share</a>
-                              <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                              <a href="#" data-popup-id="linkPopup"
+                                 class="hover-product__share link-on-popup _icon-share">Share</a>
+                              <a href="#" data-popup-id="linkPopup"
+                                 class="hover-product__like link-on-popup _icon-favorite">Like</a>
                            </div>
                         </div>
-                        <a href="#" class="hover-product__look">
+                        <a href="#" data-popup-id="linkPopup" class="hover-product__look link-on-popup">
                            <p>Learn more</p>
                            <div class="_icon-arrow-link"></div>
                         </a>
@@ -237,11 +246,13 @@
                         <div class="hover-product__actions">
                            <div class="hover-product__btn">Add to cart</div>
                            <div class="hover-product__social">
-                              <a href="#" class="hover-product__share _icon-share">Share</a>
-                              <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                              <a href="#" data-popup-id="linkPopup"
+                                 class="hover-product__share link-on-popup _icon-share">Share</a>
+                              <a href="#" data-popup-id="linkPopup"
+                                 class="hover-product__like link-on-popup _icon-favorite">Like</a>
                            </div>
                         </div>
-                        <a href="#" class="hover-product__look">
+                        <a href="#" data-popup-id="linkPopup" class="hover-product__look link-on-popup">
                            <p>Learn more</p>
                            <div class="_icon-arrow-link"></div>
                         </a>
@@ -269,11 +280,13 @@
                            <div class="hover-product__actions">
                               <div class="hover-product__btn">Add to cart</div>
                               <div class="hover-product__social">
-                                 <a href="#" class="hover-product__share _icon-share">Share</a>
-                                 <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                                 <a href="#" data-popup-id="linkPopup"
+                                    class="hover-product__share link-on-popup _icon-share">Share</a>
+                                 <a href="#" data-popup-id="linkPopup"
+                                    class="hover-product__like link-on-popup _icon-favorite">Like</a>
                               </div>
                            </div>
-                           <a href="#" class="hover-product__look">
+                           <a href="#" data-popup-id="linkPopup" class="hover-product__look link-on-popup">
 
                               <p>Learn more</p>
                               <div class="_icon-arrow-link"></div>
@@ -295,7 +308,7 @@
                      <div class="content-rooms__title">50+ Beautiful rooms inspiration</div>
                      <div class="content-rooms__text">Our designer already made a lot of beautiful prototipe of rooms
                         that inspire you</div>
-                     <a href="#" class="content-rooms__btn">Explore More</a>
+                     <a href="#" data-popup-id="linkPopup" class="content-rooms__btn link-on-popup">Explore More</a>
                   </div>
                </div>
                <div class="rooms__slider-body">
@@ -318,7 +331,8 @@
                                  </div>
                               </div>
                               <div class="slide-rooms__description-btn">
-                                 <a href="#" class="slide-rooms__description-link _icon-arrow-link"></a>
+                                 <a href="#" data-popup-id="linkPopup"
+                                    class="slide-rooms__description-link link-on-popup _icon-arrow-link"></a>
                               </div>
                            </div>
                         </div>
@@ -340,7 +354,8 @@
                                  </div>
                               </div>
                               <div class="slide-rooms__description-btn">
-                                 <a href="#" class="slide-rooms__description-link _icon-arrow-link"></a>
+                                 <a href="#" data-popup-id="linkPopup"
+                                    class="slide-rooms__description-link link-on-popup _icon-arrow-link"></a>
                               </div>
                            </div>
                         </div>
@@ -361,7 +376,8 @@
                                  </div>
                               </div>
                               <div class="slide-rooms__description-btn">
-                                 <a href="#" class="slide-rooms__description-link _icon-arrow-link"></a>
+                                 <a href="#" data-popup-id="linkPopup"
+                                    class="slide-rooms__description-link link-on-popup _icon-arrow-link"></a>
                               </div>
                            </div>
 
@@ -390,7 +406,8 @@
                                  <img src="@img/tips/1.jpg" alt="Tip 1">
                               </div>
                               <div class="tips-slide__content">
-                                 <h3 class="tips-slide__title">How to create a living room to love</h3>
+                                 <h3 class="tips-slide__title"> <a data-popup-id="linkPopup" class="link-on-popup"
+                                       href="#">How to create a living room to love</a></h3>
                                  <div class="tips-slide__date">
                                     20 jan 2020
                                  </div>
@@ -404,7 +421,8 @@
                                  <img src="@img/tips/2.jpg" alt="Tip 1">
                               </div>
                               <div class="tips-slide__content">
-                                 <h3 class="tips-slide__title">Solution for clean look working space</h3>
+                                 <h3 class="tips-slide__title"><a data-popup-id="linkPopup" class="link-on-popup"
+                                       href="#">Solution for clean look working space</a></h3>
                                  <div class="tips-slide__date">
                                     10 jan 2020
                                  </div>
@@ -418,7 +436,8 @@
                                  <img src="@img/tips/3.jpg" alt="Tip 1">
                               </div>
                               <div class="tips-slide__content">
-                                 <h3 class="tips-slide__title">Make your cooking activity more fun with good setup</h3>
+                                 <h3 class="tips-slide__title"><a data-popup-id="linkPopup" class="link-on-popup"
+                                       href="#">Make your cooking activity more fun with good setup</a></h3>
                                  <div class="tips-slide__date">
                                     20 jan 2020
                                  </div>
@@ -506,6 +525,7 @@
    </div>
    @@include('html/popup.html', {})
    @@include('html/cartPopup.html', {})
+   @@include('html/linkPopup.html', {})
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/app.js"></script>
 </body>
